--- a/package.json
+++ b/package.json
@@ -1,11 +1,36 @@
 {
   "name": "rawlejuglal.me",
   "version": "1.0.0",
-  "description": "Website portfolio for Rawle Juglal",
-  "main": "app.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/bower/bin/bower install"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "bower": "^1.7.9",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "express-generator": "^4.13.1",
+    "mongoose": "^4.4.17",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
+  },
+  "description": "Web portfolio for Rawle Juglal",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RawleJuglal/rawlejuglal.me.git"
   },
   "author": "\"Rawle Juglal <rawledjuglal@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RawleJuglal/rawlejuglal.me/issues"
+  },
+  "homepage": "https://github.com/RawleJuglal/rawlejuglal.me#readme"
 }
