finished index site

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.6",
     "angular-route": "^1.5.3",
     "angular-resource": "^1.5.3",
-    "ng-lodash": "^0.4.0"
+    "ng-lodash": "^0.4.0",
+    "FortAwesome/Font-Awesome": "*"
   }
 }
