--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-route": "^1.5.3",
     "angular-resource": "^1.5.3",
     "ng-lodash": "^0.4.0",
-    "FortAwesome/Font-Awesome": "*"
+    "FortAwesome/Font-Awesome": "*",
+    "jquery-ui": "^1.11.4"
   }
 }
