--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start karma.conf.js",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
@@ -16,6 +16,10 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-generator": "^4.13.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
     "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
