--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-generator": "^4.13.1",
     "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
+    "multer": "^1.2.0",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
   },
