--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
+    "bing.search": "^1.0.1",
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
     "cookie-parser": "~1.3.5",
